fix: corrige syntax de CORS e otimiza pool de conexões do banco